gcc/testsuite/rust/compile/array_empty_list.rs
fn main() {
    let arr = [];
    // { dg-error "type annotations needed" "" { target *-*-* } .-1 }
}
